cks-exam-labs/manifests/labs/lab-01/ssh-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cks-shell-ssh
  labels:
    app.kubernetes.io/name: cks-shell
    app.kubernetes.io/part-of: cks-lab-01
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: cks-shell
    app.kubernetes.io/part-of: cks-lab-01
  ports:
    - name: ssh
      port: 22
      targetPort: ssh
      nodePort: 32001
